<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.NewReportActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="40dp"
                android:paddingTop="50dp"
                android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="37sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="30dp"
                        android:text="@string/new_report"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:textSize="23sp"
                        android:text="@string/folioNo"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="29843"
                        android:layout_marginBottom="10dp"
                        android:textColor="@android:color/black"
                        android:textSize="17sp"
                        android:gravity="center"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:textColor="@android:color/black"
                        android:layout_marginBottom="10dp"
                        android:text="@string/load_property"/>

                <EditText
                        android:inputType="text"
                        android:id="@+id/txtProperty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:padding="10dp"
                        android:maxLines="1"
                        android:background="@drawable/grey_input_bg"/>

                 <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:textColor="@android:color/black"
                        android:layout_marginBottom="10dp"
                        android:text="@string/vehicle_number"/>

                <EditText
                        android:id="@+id/txtVehicleNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:padding="10dp"
                        android:inputType="text"
                        android:maxLines="1"
                        android:background="@drawable/grey_input_bg"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:textColor="@android:color/black"
                        android:layout_marginBottom="10dp"
                        android:text="@string/license_plate"/>

                <EditText
                        android:inputType="text"
                        android:id="@+id/txtLicence"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:padding="10dp"
                        android:maxLines="1"
                        android:background="@drawable/grey_input_bg"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:textColor="@android:color/black"
                        android:layout_marginBottom="10dp"
                        android:text="@string/conducted_security"/>

                <EditText
                        android:inputType="text"
                        android:id="@+id/txtSecurityPerson"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:padding="10dp"
                        android:maxLines="1"
                        android:background="@drawable/grey_input_bg"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:textColor="@android:color/black"
                        android:layout_marginBottom="10dp"
                        android:text="@string/email_report_sent"/>

                <EditText
                        android:inputType="textEmailAddress"
                        android:id="@+id/txtEmailReport"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="18dp"
                        android:padding="10dp"
                        android:maxLines="1"
                        android:background="@drawable/grey_input_bg"/>

                <Button
                        android:id="@+id/createNewReport"
                        android:layout_width="match_parent"
                        android:text="@string/create"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="13sp"
                        android:background="@drawable/btn_round_blue"
                        android:layout_marginBottom="18dp"
                        android:gravity="center"
                        android:layout_marginHorizontal="20dp"/>
        </LinearLayout>

    </ScrollView>

    <ProgressBar
            android:visibility="gone"
            android:id="@+id/progressNewReport"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>
