<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
android:orientation="vertical"
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Activities.SummaryLastReport">

<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="40dp"
            android:paddingTop="50dp"
            android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="23sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="15dp"
                android:text="@string/send_report"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:gravity="center"
                android:layout_marginBottom="15dp"
                android:text="@string/fill_form"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="23sp"
                android:text="@string/folioNo"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="29843"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:gravity="center"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="10dp"
                android:text="@string/load_property"/>

        <TextView
                android:id="@+id/txtPropertyOfLastReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:padding="10dp"
                android:maxLines="1"
                android:background="@drawable/grey_input_bg"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="10dp"
                android:text="@string/vehicle_number"/>

        <TextView
                android:id="@+id/txtVehicleNumberSendReportLastReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:padding="10dp"
                android:inputType="number"
                android:maxLines="1"
                android:background="@drawable/grey_input_bg"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="10dp"
                android:text="@string/license_plate"/>

        <TextView
                android:id="@+id/txtLicenceSendReportLastReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:padding="10dp"
                android:maxLines="1"
                android:background="@drawable/grey_input_bg"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="10dp"
                android:text="@string/conducted_security"/>

        <TextView
                android:id="@+id/txtSecurityPersonSendReportLastReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:padding="10dp"
                android:maxLines="1"
                android:background="@drawable/grey_input_bg"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="10dp"
                android:text="@string/email_report_sent"/>

        <TextView
                android:id="@+id/txtEmailReportSendReportLastReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:padding="10dp"
                android:maxLines="1"
                android:background="@drawable/grey_input_bg"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp">

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginRight="5dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:textColor="@android:color/black"
                        android:layout_marginBottom="10dp"
                        android:text="Date / Time"/>

                <LinearLayout
                        android:id="@+id/btnDateDetailLastReport"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/grey_input_bg"
                        android:orientation="horizontal">

                    <TextView
                            android:id="@+id/txtDateDetailLastReport"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:padding="4dp"
                            android:layout_gravity="center"
                            android:textColor="@android:color/black"
                            android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="10dp"
                android:text="@string/follow_up_security"/>

        <TextView
                android:id="@+id/txtSecurityPersonSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:padding="10dp"
                android:maxLines="1"
                android:background="@drawable/grey_input_bg"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="10dp"
                android:text="@string/seal_number"/>

        <TextView
                android:id="@+id/txtSealNumbersSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:padding="10dp"
                android:maxLines="1"
                android:background="@drawable/grey_input_bg"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="10dp"
                android:text="@string/affixed_seals"/>

        <TextView
                android:id="@+id/txtPersonAfixedSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:padding="10dp"
                android:maxLines="1"
                android:background="@drawable/grey_input_bg"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="10dp"
                android:text="@string/physical_seals"/>

        <TextView
                android:id="@+id/txtPersonVerifiedSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:padding="10dp"
                android:maxLines="1"
                android:background="@drawable/grey_input_bg"/>
        <LinearLayout
                android:id="@+id/btnSeePhotosLastReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_round_blue"
                android:layout_marginBottom="18dp"
                android:gravity="center"
                android:layout_marginHorizontal="20dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:paddingVertical="10dp"
                    android:text="See Evidence"/>

        </LinearLayout>


        <LinearLayout
                android:id="@+id/createNewReportLastReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_round_blue"
                android:layout_marginBottom="18dp"
                android:gravity="center"
                android:layout_marginHorizontal="20dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:paddingVertical="10dp"
                    android:text="Back"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>



</LinearLayout>
