<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.WelcomeActivity">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="20dp"
                android:paddingVertical="50dp"
                android:orientation="vertical">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:textColor="@android:color/black"
                            android:textSize="37sp"
                            android:text="@string/welcome"/>

                </LinearLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:gravity="center"
                        android:textColor="#2A2A2E"
                        android:text="@string/welcome_description"/>


                <Button
                        android:id="@+id/btnLogOut"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Log Out"
                        android:layout_margin="10dp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:background="@drawable/round_corners"
                        android:backgroundTint="@color/orange"/>

             <!--   <TextView
                        android:id="@+id/btnLogOut"
                        android:layout_marginTop="16dp"
                        android:textColor="@color/lightBlack"
                        android:text="Log Out"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>-->
                
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="6"
                    android:orientation="horizontal">

                    <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_marginHorizontal="10dp"
                            android:padding="20dp"
                            android:elevation="5dp"
                            android:background="@drawable/btn_round_white"
                            android:orientation="vertical"
                            android:layout_marginBottom="20dp"
                            android:layout_marginTop="20dp">

                            <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight="1">

                            </LinearLayout>

                            <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight="2"
                                    android:orientation="vertical">

                                    <ImageView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:src="@drawable/ic_file"
                                            android:layout_marginBottom="5dp"/>

                                    <TextView
                                            android:layout_width="70dp"
                                            android:layout_height="wrap_content"
                                            android:textColor="@android:color/black"
                                            android:textSize="14sp"
                                            android:textStyle="bold"
                                            android:text="@string/new_report"/>

                            </LinearLayout>

                            <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight="1.5"
                                    android:gravity="center">

                                    <LinearLayout
                                            android:id="@+id/createReport"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:gravity="center"
                                            android:background="@drawable/btn_round_blue">

                                            <TextView android:layout_width="wrap_content"
                                                      android:layout_height="wrap_content"
                                                      android:textColor="@android:color/white"
                                                      android:textSize="13sp"
                                                      android:paddingVertical="6dp"
                                                      android:textStyle="bold"
                                                      android:text="@string/create"/>

                                    </LinearLayout>

                            </LinearLayout>

                    </LinearLayout>

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginHorizontal="10dp"
                        android:padding="20dp"
                        android:elevation="5dp"
                        android:background="@drawable/btn_round_white"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1">

                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:orientation="vertical">

                        <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_clock"
                                android:layout_marginBottom="5dp"/>

                        <TextView
                                android:layout_width="70dp"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/black"
                                android:textSize="14sp"
                                android:textStyle="bold"
                                android:text="@string/last_reports"/>

                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1.5"
                            android:gravity="center">


                        <LinearLayout
                                android:id="@+id/btnLastReports"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:background="@drawable/btn_round_blue">

                            <TextView android:layout_width="wrap_content"
                                      android:layout_height="wrap_content"
                                      android:textColor="@android:color/white"
                                      android:textSize="13sp"
                                      android:paddingVertical="6dp"
                                      android:textStyle="bold"
                                      android:text="@string/see"/>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>




            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2.5">

                <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:srcCompat="@tools:sample/avatars" />
            </LinearLayout>
                

        </LinearLayout>


</LinearLayout>
